ensure Karaf can build and run with JDK11/JDK10