@@ -392,70 +392,6 @@
     </reporting>
     <profiles>
         <profile>
-	        <id>java9</id>
-	        <properties>
-                <plexus-utils.version>3.1.0</plexus-utils.version>
-                <mvn.opts>--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED --add-modules java.activation,java.xml.ws.annotation,java.corba,java.transaction,java.xml.bind,java.xml.ws -Djava.io.tmpdir=${project.build.directory}</mvn.opts>
-	        </properties>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>2.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>javax.activation</groupId>
-                        <artifactId>activation</artifactId>
-                        <version>1.1.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-core</artifactId>
-                        <version>${jaxb.version}</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.glassfish.jaxb</groupId>
-                                <artifactId>jaxb-core</artifactId>
-                            </exclusion>
-                            <exclusion>
-                                <groupId>org.glassfish.jaxb</groupId>
-                                <artifactId>txw2</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                    <dependency>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                        <version>${jaxb.version}</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>javax.xml.bind</groupId>
-                                <artifactId>jsr173_api</artifactId>
-                            </exclusion>
-                            <exclusion>
-                                <groupId>javax.xml</groupId>
-                                <artifactId>jsr173</artifactId>
-                            </exclusion>
-                            <exclusion>
-                                <groupId>javax.activation</groupId>
-                                <artifactId>activation</artifactId>
-                            </exclusion>
-                            <exclusion>
-                                <groupId>javax.xml.bind</groupId>
-                                <artifactId>activation</artifactId>
-                            </exclusion>
-                            <exclusion>
-                                <groupId>javax.xml.bind</groupId>
-                                <artifactId>jaxb-api</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                </dependencies>
-	        <activation>
-        	    <jdk>9</jdk>
-            </activation>
-	</profile>
-        <profile>
             <id>skiptests</id>
             <properties>
                 <invoker.skip>true</invoker.skip>
